--- a/Views/Shared/_DepartmentLayout.cshtml
+++ b/Views/Shared/_DepartmentLayout.cshtml
@@ -116,10 +116,29 @@
                     </li>
 
                     <li class="nav-item">
-                        <a id="child-studentaffairs-studentaffairsstatisticals-index" class="nav-link child-nav-link " href="@Url.Action("Statistical", "Statisticals")">
-                            <i class="nav-icon fe fe-bar-chart me-2"></i>
+                        <a id="parent-thongke" class="nav-link  " href="#"
+                           data-bs-toggle="collapse" data-bs-target="#nav-thongke" aria-expanded="false"
+                           aria-controls="nav-thongke">
+                            <i class="nav-icon fe fe-bar-chart me-2"></i> 
                             Thống kê
                         </a>
+                        <div id="nav-thongke" class="collapse "
+                             data-bs-parent="#sideNavbar">
+                            <ul class="nav flex-column">
+                                <li class="nav-item ">
+                                    <a id="child-thongke-trogiang" class="child-nav-link nav-link "
+                                       href="@Url.Action("Statistical", "Statisticals")">
+                                        Trợ giảng
+                                    </a>
+                                </li>
+                                <li class="nav-item ">
+                                    <a id="child-thongke-thulao" class="child-nav-link nav-link "
+                                       href="@Url.Action("StatisticalRemuneration", "Statisticals")">
+                                        Thù lao
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
 
                     <li class="nav-item">
